--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: generic 
 sudo: required
 services:
-  -docker
+  - docker
 
 before_install:
   - docker build -t andreitarlapan/docker-react -f Dockerfile.dev .
@@ -14,10 +14,9 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket_name: "arn:aws:glacier:us-east-2:876199432626:vaults/postavechie"
+  bucket_name: "elasticbeanstalk-us-east-2-876199432626"
   bucket_path: "docker-react"
   on:
     branch: master
   acces_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
