--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 before_install:
+  - docker login -u $andreitarlapan -p $nzhpnS190578
   - docker build -t andreitarlapan/docker-react -f Dockerfile.dev .
 
 script:
