--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ sudo: required
 services:
   - docker
 
-before_install:
+commands:
   - docker login -u $andreitarlapan -p $nzhpnS190578
+
+before_install:
   - docker build -t andreitarlapan/docker-react -f Dockerfile.dev .
 
 script:
